--- a/setup.cfg
+++ b/setup.cfg
@@ -11,14 +11,19 @@ keywords = colcon
 
 [options]
 install_requires =
-  httpx
   colcon-common-extensions
+  httpx==0.11.1  # version requirement via sanic
+  requests
+  sanic
 packages = find:
 zip_safe = true
 
 [options.entry_points]
 console_scripts =
     colcon_gen_cache = colcon_distro.generator:main
+
+[options.package_data]
+* = *.sql
 
 [flake8]
 import-order-style = google
