Proper entry point, args, config file, start of DB.

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,16 +11,18 @@ keywords = colcon
 
 [options]
 install_requires =
+  aiosqlite
   colcon-common-extensions
   httpx==0.11.1  # version requirement via sanic
   requests
   sanic
+  toml
 packages = find:
 zip_safe = true
 
 [options.entry_points]
 console_scripts =
-    colcon_gen_cache = colcon_distro.generator:main
+    colcon_distro_cache = colcon_distro.cli:main
 
 [options.package_data]
 * = *.sql
