Small readme fix.

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author_email = mpurvis@clearpath.ai
 maintainer = Mike Purvis
 maintainer_email = mpurvis@clearpath.ai
 description = Distro management using colcon tools.
-long_description = file: README.rst
+long_description = file: README.md
 keywords = colcon
 
 [options]
