Basic server implementation.

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ zip_safe = true
 [options.entry_points]
 console_scripts =
     colcon_distro_cache = colcon_distro.cli:main
+    colcon_distro_server = colcon_distro.server:main
 
 [options.package_data]
 * = *.sql
