--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ keywords = colcon
 [options]
 install_requires =
   aiosqlite
+  brotli
   colcon-common-extensions
   httpx==0.11.1  # version requirement via sanic
   requests
