--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,8 @@ zip_safe = true
 console_scripts =
     colcon_distro_cache = colcon_distro.cli:main
     colcon_distro_server = colcon_distro.server:main
+colcon_core.verb =
+    generate = colcon_distro.generate:GenerateVerb
 
 [options.package_data]
 * = *.sql
