--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ console_scripts =
     colcon_distro_server = colcon_distro.server:main
 colcon_core.verb =
     generate = colcon_distro.generate:GenerateVerb
+    download = colcon_distro.download:DownloadVerb
 
 [options.package_data]
 * = *.sql
