Fix missing vendor subpackage.

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,9 @@ install_requires =
   requests
   sanic
   toml
-packages = find:
+packages =
+  colcon_distro
+  colcon_distro.vendor
 zip_safe = true
 
 [options.entry_points]
