--- a/setup.cfg
+++ b/setup.cfg
@@ -13,7 +13,7 @@ keywords = colcon
 install_requires =
   aiosqlite
   colcon-common-extensions
-  httpx==0.11.1  # version requirement via sanic
+  httpx
   requests
   sanic
   toml
