Move generate verb to separate file.

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,7 @@ console_scripts =
     colcon_distro_cache = colcon_distro.cli:main
     colcon_distro_server = colcon_distro.server:main
 colcon_core.verb =
-    generate = colcon_distro.generate:GenerateVerb
+    generate = colcon_distro.verbs.generate:GenerateVerb
     download = colcon_distro.download:DownloadVerb
 
 [options.package_data]
