Move download verb to separate file.

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ console_scripts =
     colcon_distro_server = colcon_distro.server:main
 colcon_core.verb =
     generate = colcon_distro.verbs.generate:GenerateVerb
-    download = colcon_distro.download:DownloadVerb
+    download = colcon_distro.verbs.download:DownloadVerb
 
 [options.package_data]
 * = *.sql
