Use twine for uploading.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,8 @@ pypi:
   needs: [setuptools-dist]
   only: [tags]
   script:
-  - python3 setup.py upload -r local
+  - pip3 install -U twine
+  - twine upload -r local dist/*
 
 pages:
   stage: deploy
