--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,10 @@
 include:
   project: sweng-infra/gitlab-ci
   file: python.yml
+
+before_script:
+  - apt-get update
+  - apt-get -yq install git
+
+flake8:
+  allow_failure: true
