--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,13 @@
 include:
   project: sweng-infra/gitlab-ci
-  file: python.yml
+  file:
+    - python.yml
+    - lint/flake8.yml
 
 nose:
   before_script:
-  - apt-get update
-  - apt-get -yq install $(< deps.txt)
+    - apt-get update
+    - apt-get -yq install $(< deps.txt)
 
 flake8:
   allow_failure: true
