Minor linter fixups

--- a/setup.cfg
+++ b/setup.cfg
@@ -35,5 +35,6 @@ colcon_core.verb =
 
 [flake8]
 import-order-style = google
-max-line-length = 100
+max-line-length = 120
 exclude = setup.py,vendor
+ignore = D,W503
