Creation of repo augmentation extension point.

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,8 @@ console_scripts =
 colcon_core.verb =
     generate = colcon_distro.verbs.generate:GenerateVerb
     download = colcon_distro.verbs.download:DownloadVerb
+colcon_core.extension_point =
+    colcon_distro.repository_augmentation = colcon_distro.discovery:RepositoryAugmentationExtensionPoint
 
 [options.package_data]
 * = *.sql
