Slightly improved error handling, more accurate coverage number.

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,3 +40,6 @@ import-order-style = google
 max-line-length = 120
 exclude = setup.py,vendor
 ignore = D,W503
+
+[coverage:run]
+source = colcon_distro
