Add verbs to setuptools package list.

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ install_requires =
 packages =
   colcon_distro
   colcon_distro.vendor
+  colcon_distro.verbs
 zip_safe = true
 
 [options.entry_points]
