SES-2419: Mypy integration and fixes.

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,3 +44,8 @@ ignore = D,W503
 
 [coverage:run]
 source = colcon_distro
+
+[mypy]
+
+[mypy-colcon_core.*,colcon_output.*,colcon_distro.vendor.*]
+ignore_missing_imports = True
