Add Apache 2.0 license.

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,6 +8,7 @@ maintainer_email = mpurvis@clearpath.ai
 description = Distro management using colcon tools.
 long_description = file: README.md
 keywords = colcon
+license = Apache License, Version 2.0
 
 [options]
 install_requires =
