--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ description = Distro management using colcon tools.
 long_description = file: README.md
 keywords = colcon
 license = Apache License, Version 2.0
+python_requires = '>=3.8'
 
 [options]
 install_requires =
